# dag-doctor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow_plugin/: dag_doctor_plugin.py
dashboard/: app.py  utils.py
dashboard/.streamlit/: config.toml
dashboard/app_pages/: __init__.py  incidents.py  intelligence.py  overview.py  reports.py
demo_dags/: auth_error_dag.py  import_error_dag.py  python_exception_dag.py  sql_error_dag.py  timeout_dag.py
deploy/helm/dag-doctor/: Chart.yaml  values.yaml
deploy/helm/dag-doctor/templates/: _helpers.tpl  deployment.yaml
docs/: architecture.md  demo.md  enterprise-roadmap.md  phase-0-plan.md  safety.md
migrations/: env.py
migrations/versions/: bdff5d79fb49_initial_enterprise_schema.py
src/airflow_copilot/: __init__.py  airflow_client.py  audit.py  auth.py  circuit_breaker.py  classifier.py  clustering.py  config.py  database.py  demo_fixtures.py  eval_harness.py  evidence.py  incident_memory.py  job_queue.py  llm.py  log_parser.py  logging_config.py  main.py  metrics.py  models.py  orm.py  ownership.py  performance.py  prevention.py  redaction.py  report_generator.py  storage.py  webhooks.py
src/airflow_copilot/api/: admin_routes.py  auth_routes.py  demo_routes.py  dependencies.py  environment_routes.py  intelligence_routes.py  routes.py
src/airflow_copilot/integrations/: github.py  jira.py  slack.py
src/airflow_copilot/providers/: anthropic.py  base.py  openai.py  registry.py  utils.py
tests/: test_api.py  test_classifier.py  test_dashboard_integration.py  test_demo.py  test_eval.py  test_integration_live.py  test_log_parser.py  test_report_generator.py
tests/fixtures/: golden_dataset.json
